--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 rocket = "0.4.0"
 diesel = { version = "1.0.0", features = ["sqlite"] }
+argonautica = "0.1.5"
 
 [dependencies.rocket_contrib]
 version = "0.4.0"
